--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "docusaurus": "docusaurus",
     "start": "docusaurus start",
+    "build": "docusaurus build",
     "build:gitlab": "docusaurus build --out-dir public",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
